# industry

./: pyproject.toml
src/industry/: __init__.py
src/industry/accounts/behaviors/: user.py
src/industry/accounts/commands/: user.py
src/industry/accounts/entity/: user.py
src/industry/accounts/events/: user.py
src/industry/accounts/mutators/: user.py
src/industry/accounts/repository/: user.py
src/podiya/: aggregate.py  service.py
src/podiya/actor/: behavior.py  genserver.py  message.py  process.py  supervisor.py  system.py  utils.py
src/podiya/actor/process/: __init__.py  context.py  mailbox.py  pid.py  process.py  registry.py
tests/industry/accounts/: entity_test.py
tests/podiya/: aggregate_test.py  conftest.py  genserver_test.py  mocks.py  supervisor_test.py
tests/podiya/process/: process_test.py
