[project]
name = "industry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mike Oz", email = "kozloffsky@hotmal.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
industry = "industry:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
